--- a/PressaoMonitor/app/src/main/res/values/strings.xml
+++ b/PressaoMonitor/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PressaoMonitor</string>
+    <string name="title_activity_register_arterial_pressure">RegisterArterialPressureActivity
+    </string>
 </resources>
